--- a/lms/templates/courseware/course_review.html
+++ b/lms/templates/courseware/course_review.html
@@ -140,6 +140,7 @@
           url : '/course_review_gb',
           type: "POST",
           data : {
+              course_id:"${course.id}",
               gb:gb,
               review_id:review_id,
               review_seq:review_seq,
