refactor: 강좌소개페이지 동영상 다운로드 막는 기능

--- a/lms/templates/courseware/course_about.html
+++ b/lms/templates/courseware/course_about.html
@@ -23,6 +23,10 @@ from six import string_types
 <%block name="js_extra">
   <script type="text/javascript">
   (function() {
+      $(".youtubewrap").bind('contextmenu', function (e) {
+        return false;
+      });
+      
     $(".register").click(function(event) {
       $("#class_enroll_form").submit();
       event.preventDefault();
