--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -205,7 +205,7 @@ if (
                   <span class="tip" id="tip-new-course-name">${_("The public display name for your course. This cannot be changed, but you can set a different display name in Advanced Settings later.")}</span>
                   <span class="tip tip-error is-hiding" id="tip-error-new-course-name"></span>
                 </li>
-                <li class="field text required">
+                <li class="field text required" id="field-organization">
                   <label for="new-course-org">${_("Organization")}</label>
                   ## Translators: This is an example for the name of the organization sponsoring a course, seen when filling out the form to create a new course. The organization name cannot contain spaces.
                   ## Translators: "e.g. UniversityX or OrganizationX" is a placeholder displayed when user put no data into this field.
@@ -222,7 +222,6 @@ if (
                   )}</span>
                   <span class="tip tip-error is-hiding" id="tip-error-new-course-org"></span>
                 </li>
-
                 <li class="field text required" id="field-course-number">
                   <label for="new-course-number">${_("Course Number")}</label>
                   ## Translators: This is an example for the number used to identify a course,
@@ -482,9 +481,9 @@ if (
             //console.log("--------------------------------------------");
             //console.log("bcate selected : "+bcate_val);
             //console.log("--------------------------------------------");
-            console.log("-----------------")
-            console.log(middle_classfy_id)
-            console.log("-----------------")
+            //console.log("-----------------")
+            //console.log(middle_classfy_id)
+            //console.log("-----------------")
 
             removeOptions(middle_classfy_id);
             input_middle_classfy(middle_classfy_id, bcate_val);
