2018/11/15 e 버전에서 영문화 작업 반영한 것 h 버전에 반영:Il-Hee, Maeng

--- a/cms/templates/settings.html
+++ b/cms/templates/settings.html
@@ -294,26 +294,26 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
   -->
               <input type="hidden" class="short time" id="course-effort" placeholder="HH:MM"/>
 
-              <div>
+              <div style="width: 100%; float: left;">
 
-                <div style="width: 200px; float: left;">
-                  <span class="tip tip-inline" style="font-size: 14px;"><b>주간 학습권장시간</b></span><br/>
+                <div style="width: 250px; float: left;">
+                  <span class="tip tip-inline" style="font-size: 14px; display:block; height: 15px;"><b>${_("Recommended commitment Effort per week")}</b></span><br/>
                   <input type="text" class="short time" id="course-effort-hh" placeholder="HH" style="width: 50px; float: left;" maxlength="2"/><span
-                        style="float: left; padding: 10px;">시간</span>
+                        style="float: left; padding: 10px;">${_("hours")}</span>
                   <input type="text" class="short time" id="course-effort-mm" placeholder="MM" style="width: 50px; float: left;" maxlength="2"/><span
-                        style="float: left; padding: 10px;">분</span>
+                        style="float: left; padding: 10px;">${_("minutes")}</span>
                 </div>
 
-                <div style="width: 120px; float: left;">
-                  <span class="tip tip-inline" style="font-size: 14px;"><b>총 주차</b></span><br/>
+                <div style="width: 150px; float: left;">
+                  <span class="tip tip-inline" style="font-size: 14px; display:block; height: 15px;"><b>${_("Total no. of weeks Length")}</b></span><br/>
                   <input type="text" class="short time" id="course-effort-week" placeholder="Week" style="width: 63px; float: left;" maxlength="2"/><span
-                        style="float: left; padding: 10px;">주차</span>
+                        style="float: left; padding: 10px;">${_("weeks")}</span>
                 </div>
 
-                <div style="width: 200px; float: left;">
-                  <span class="tip tip-inline" style="font-size: 14px;"><b>학습인정시간</b></span><br/>
-                  <input type="text" class="short time" id="Calculated" placeholder="HH" onKeypress="if(event.keyCode < 45 || event.keyCode > 57) event.returnValue = false;" maxlength="2" style="IME-MODE:disabled; width: 55px; float: left;" /><span style="float: left; padding: 10px;">시간</span>
-                  <input type="text" class="short time" id="Calculated_mm" placeholder="MM" onKeypress="if(event.keyCode < 45 || event.keyCode > 57) event.returnValue = false;" maxlength="2" style="IME-MODE:disabled; width: 55px; float: left;" /><span style="float: left; padding: 10px;">분</span>
+                <div style="float: left;">
+                  <span class="tip tip-inline" style="font-size: 14px; display:block; height: 15px;"><b>${_("Accredited learning time")}</b></span><br/>
+                  <input type="text" class="short time" id="Calculated" placeholder="HH" onKeypress="if(event.keyCode < 45 || event.keyCode > 57) event.returnValue = false;" maxlength="2" style="IME-MODE:disabled; width: 55px; float: left;" /><span style="float: left; padding: 10px;">${_("hours")}</span>
+                  <input type="text" class="short time" id="Calculated_mm" placeholder="MM" onKeypress="if(event.keyCode < 45 || event.keyCode > 57) event.returnValue = false;" maxlength="2" style="IME-MODE:disabled; width: 55px; float: left;" /><span style="float: left; padding: 10px;">${_("minutes")}</span>
                 </div>
 
                 <br/>
@@ -322,11 +322,10 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
               <br/>
               <br/>
 
-              <span class="tip tip-inline">- 주간 학습권장시간 : 해당 강좌를 충실히 학습하기 위해 필요한 주별 평균 권장 학습시간</span><br/>
-              <span class="tip tip-inline">- 총 주차 : 중간/기말고사를 포함한 총 주차수</span><br/>
-              <span class="tip tip-inline">(예 : 15주차 = 13주(강의) + 1주(중간고사) + 1주(기말고사))</span><br/>
-              <span class="tip tip-inline">- 학습인정시간 : 본 강좌 이수자에게 인정되는 총 학습시간으로, 이수 후 이력 인정등에 사용됨</span><br/>
-              <span class="tip tip-inline">※ <a href="/file_down/677">'학습인정시간 산출지침'</a>에 따라 13주차 기준 최대 50시간 이내로 산정</span>
+              <span class="tip tip-inline">${_("- Weekly Study : Estimated hours for doing weekly learning activities like video, assignments and group discussions")}</span><br/>
+              <span class="tip tip-inline">${_("- Length : No. of weeks including mid-term/final tests weeks")}</span><br/>
+              <span class="tip tip-inline">${_("- Accredited learning time: The accredited amount of time students are actively involved in the learning process")}</span><br/>
+              <span class="tip tip-inline"><a href="/file_down/677">※ ${_("Up to 50 hours for 13 weeks course according to 'Accredited learning time Guide'")}</a></span>
 
               <br/>
               <br/>
@@ -337,14 +336,13 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
               -->
 
               <div>
-                <span class="tip tip-inline" style="font-size: 14px;"><b>총 동영상시간</b></span><br/>
-                <input type="text" class="short time" id="course-video-hh" placeholder="HH" style="width: 50px; float: left;" maxlength="2"/><span style="float: left; padding: 10px;">시간</span>
+                <span class="tip tip-inline" style="font-size: 14px;"><b>${_("Video Duration")}</b></span><br/>
+                <input type="text" class="short time" id="course-video-hh" placeholder="HH" style="width: 50px; float: left;" maxlength="2"/><span style="float: left; padding: 10px;">${_("hours")}</span>
                 <input type="text" class="short time" id="course-video-mm" placeholder="MM" style="width: 50px; float: left;" maxlength="2"/><span
-                      style="float: left; padding: 10px;">분</span>
+                      style="float: left; padding: 10px;">${_("minutes")}</span>
                 <br/><br/>
               </div>
-              <span class="tip tip-inline">강의 내용과 관련된 동영상 재생 시간의 총 합계</span>
-              <span class="tip tip-inline">※ 강의 내용과 무관한 홍보동영상 등은 제외</span>
+              <span class="tip tip-inline">${_("Video Duration : Total video duration related with course contents")}</span>
               <br/>
 
 
@@ -416,7 +414,7 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
             <li class="field" id="field-course-language">
               <label for="course-language">${_("Course Language")}</label>
               <select id="course-language">
-                <option value="" selected>-미선택-</option>
+                <option value="" selected>${_("Not applicable")}</option>
                 % for lang, label in language_options:
                 <option value="${lang}">${_(label)}</option>
                 % endfor
@@ -424,19 +422,19 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
               <span class="tip tip-stacked">${_("Identify the course language here. This is used to assist users find courses that are taught in a specific language. It is also used to localize the 'From:' field in bulk emails.")}</span>
             </li>
             <li class="field" id="field-course-language selectdiv">
-              <label for="동">강좌 난이도</label>
+              <label for="동">${_("Level")}</label>
               <select class="select difficult-degree" id="selectfixid">
-                <option value="">-미선택-</option>
+                <option value="">${_("Not applicable")}</option>
                 % for difficult_row in difficult_degree_list['degree_list']:
                 <option value="${difficult_row[0]}">${difficult_row[1]}</option>
                 % endfor
               </select>
-              <span class="tip tip-stacked">강좌 내용의 어려운 수준을 선택하세요.</span>
+              <span class="tip tip-stacked">${_("Select the difficulty level of the course.")}</span>
             </li>
             <li class="field" id="field-course-language">
-                <label for="course-language">교수자명</label>
-                <input type="text" id = "teacher_name" value="${teacher_name}" placeholder="예: 홍길동, 임꺽정">
-                <span class="tip tip-stacked">교수자가 복수인 경우 콤마(,) 로 구분해서 입력해주세요(예: 홍길동, 임꺽정)</span>
+                <label for="course-language">${_("Name of Lecturer")}</label>
+                <input type="text" id = "teacher_name" value="${teacher_name}" placeholder='${_("EX. Albert Einstein, Marie Curie")}'>
+                <span class="tip tip-stacked">${_("Please insert a comma (,) between Lecturers")}</span>
                 <div style="display: none">
                     <div id="addinfo_course_id" >${lms_link_for_about_page}</div>
                     <div id="addinfo_user_id" >${user.id}</div>
@@ -454,23 +452,29 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
                                 if key is None or val is None:
                                     continue
 
-                                print val, key
-                                print val[0]
-                                print val[1]
-                                print val[2]
+                                # print val, key
+                                # print val[0]
+                                # print val[1]
+                                # print val[2]
 
-                                print val[0][0]
-                                print val[0][1]
+                                # print val[0][0]
+                                # print val[0][1]
 
-                                print val[1][0]
-                                print val[1][1]
+                                # print val[1][0]
+                                # print val[1][1]
 
-                                print val[2][0]
-                                print val[2][1]
+                                # print val[2][0]
+                                # print val[2][1]
 
+                            if request.LANGUAGE_CODE == 'ko-kr':
                                 pstr = """var degree = {'category':[{'code':'""" + val[0][0] + """', 'gettext': '""" + val[0][1] + """'}, """
                                 pstr += """{'code':'""" + val[1][0] + """', 'gettext': '""" + val[1][1] + """'}, """
                                 pstr += """{'code':'""" + val[2][0] + """', 'gettext': '""" + val[2][1] + """'},]};"""
+                            else:
+                                pstr = """var degree = {'category':[{'code':'""" + val[0][0] + """', 'gettext': '""" + val[0][2] + """'}, """
+                                pstr += """{'code':'""" + val[1][0] + """', 'gettext': '""" + val[1][2] + """'}, """
+                                pstr += """{'code':'""" + val[2][0] + """', 'gettext': '""" + val[2][2] + """'},]};"""
+
                         except Exception as e:
                             print e
                         %>
@@ -499,7 +503,7 @@ ${can_show_certificate_available_date_field(context_course) | n, dump_js_escaped
                             var input_difficult_degree = function(selectbox,p_info){
                                 //console.log("run settings_advanced.html javascript calling input_difficult_degree");
                                 var option = document.createElement("option");
-                                option.text = "-미선택-";
+                                option.text = '${_("Not applicable")}';
                                 option.value = "";
                                 selectbox.appendChild(option);
                                 for(key in degree[p_info]) {
